Update Icon font and adjust all style colors

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -26,9 +26,7 @@
 //-------------------------------------
 
 .header
-  background: #42b398
   padding-top: rem(55px)
-  padding-bottom: rem(115px)
   text-align: center
 
 .header-about
@@ -37,60 +35,63 @@
 // ----- Logo ----- //
 
 .logo
-  background: #FFF
   display: inline-block
-  border-radius: 50%
-  height: rem(155px)
-  width: rem(155px)
   h1
-    padding-top: rem(22px)
-    margin-left: rem(7px)
     text-align: center
-    font-size: rem(120px)
+    font-size: rem(180px)
     font-weight: normal
-    color: #42b398
+    color: $base-color
     line-height: 0.9
   i:before
     @extend %icn
     @extend %icn--logo
 
+.logo-name
+  @extend .logo
+  position: relative
+  top: -25px
+  i:before
+    @extend %icn--name
+
 // ----- Content ----- //
 
 .info
-  background: #FFF
-  padding: 30px 43px 10px
-  border-bottom: 2px solid rgba(#000,0.2)
+  padding: 0 43px 10px
+  // border-bottom: 2px solid rgba(#000,0.5)
+  // border-top: 2px solid rgba(#000, 0.5)
   position: relative
-  bottom: 70px
-
-.c-content
-  background: #E5E5E5
 
 // ----- Footer ----- //
 
 .footer
-  background: #242827
+
 
 //-------------------------------------
 //  Inbox
 //-------------------------------------
+%link
+  border-bottom: none
 
 .link-envy
+  @extend %link
   i:before
     @extend %icn
     @extend %icn--envy
 
 .link-twitter
+  @extend %link
   i:before
     @extend %icn
     @extend %icn--twitter
 
 .link-dribbble
+  @extend %link
   i:before
     @extend %icn
     @extend %icn--dribbble
 
 .link-github
+  @extend %link
   i:before
     @extend %icn
     @extend %icn--github
