--- a/source/assets/stylesheets/core/_settings.sass
+++ b/source/assets/stylesheets/core/_settings.sass
@@ -17,10 +17,10 @@
 
 // Base Colors
 
-$base-background: #242827
-$base-color: #444b49
+$base-background: #FFF
+$base-color: rgba(#000, 0.8)
 $base-invert-color: #FFF
-$base-link-color: #444b49
+$base-link-color: #B83D3D
 
 // Fonts
 
