--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -19,6 +19,11 @@
         .logo
           %h1
             %i(aria-hidden="true")
+            %b.srt Logo
+      .l-cell
+        .logo-name
+          %h1
+            %i(aria-hidden="true")
             %b.srt Jordan Wade
 
     = yield
