Initial SVG animation setup

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -36,9 +36,10 @@
 
 .logo
   display: inline-block
+  position: relative
   h1
     text-align: center
-    font-size: rem(180px)
+    font-size: rem(235px)
     font-weight: normal
     color: $base-color
     line-height: 0.9
