--- a/source/assets/stylesheets/modules/_animations.sass
+++ b/source/assets/stylesheets/modules/_animations.sass
@@ -1,3 +1,8 @@
 //-------------------------------------
 //  Animations
 //-------------------------------------
+
+#holder
+  position: absolute
+  top: 59px
+  right: -8px
