Tweaking eye and eyebrow animation

--- a/source/assets/stylesheets/core/_settings.sass
+++ b/source/assets/stylesheets/core/_settings.sass
@@ -53,3 +53,49 @@ $c-mono-fontFamily: Monaco, Consolas, "Lucida Console", monospace
 // Layout
 
 $l-maxWidth: 700px
+
+
+//animations
+
+@-webkit-keyframes move_eye
+  to
+    -webkit-transform: translateX(5px)
+    transform: translateX(5px)
+
+@-moz-keyframes move_eye
+  to
+    -webkit-transform: translateX(5px)
+    transform: translateX(5px)
+
+@-o-keyframes move_eye
+  to
+    -webkit-transform: translateX(5px)
+    transform: translateX(5px)
+
+@keyframes move_eye
+  to
+    -webkit-transform: translateX(5px)
+    transform: translateX(5px)
+
+// ----- Comment ----- //
+
+@-webkit-keyframes move_eye_left
+  to
+    -webkit-transform: translateX(-5px)
+    transform: translateX(-5px)
+
+@-moz-keyframes move_eye_left
+  to
+    -webkit-transform: translateX(-5px)
+    transform: translateX(-5px)
+
+@-o-keyframes move_eye_left
+  to
+    -webkit-transform: translateX(-5px)
+    transform: translateX(-5px)
+
+@keyframes move_eye_left
+  to
+    -webkit-transform: translateX(-5px)
+    transform: translateX(-5px)
+
