--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -21,6 +21,7 @@
           %h1
             %i(aria-hidden="true")
             %b.srt Logo
+          .eyes
           #holder
       .l-cell
         .logo-name
