--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,16 +11,14 @@
     %link{:rel => 'shortcut icon', :type => 'image/x-icon', :href => image_path('favicon.ico')}
     %link{:href => "http://fonts.googleapis.com/css?family=Quando", :rel => "stylesheet", :type => "text/css"}
     = stylesheet_link_tag 'normalize', 'application'
-    = javascript_include_tag  'application', 'raphael', 'animation'
+    = javascript_include_tag  'application'
 
 
   %body{class: page_classes}
+    / .brow
     %header.header.l-row
       .l-cell
         .logo
-          %h1
-            %i(aria-hidden="true")
-            %b.srt Logo
           .eyes
           #holder
       .l-cell
