Tweak layout and fix view box in Raphael

--- a/source/assets/stylesheets/modules/_animations.sass
+++ b/source/assets/stylesheets/modules/_animations.sass
@@ -8,13 +8,8 @@
   top: -48px
   height: 225px
 
-// .logo
-//   &:hover
-//     .eyes
-//       -webkit-transition: right 1s
-//       transition: right 1s
-//       -webkit-transform: translateX(10px)
-//       transform: translateX(10px)
+.logo
+  +transform (scale(0.7))
 // .brow
 //   background: image-url('brow.svg') 0 0 no-repeat
 //   width: 38px
@@ -28,8 +23,8 @@
   background: image-url('eyes.svg') 0 0 no-repeat
   height: 100%
   position: absolute
-  right: -84px
-  top: 97px
+  right: -63px
+  top: 70px
   width: 100%
   -webkit-transition: right 1s
   transition: right 1s
