--- a/source/index.haml
+++ b/source/index.haml
@@ -4,7 +4,7 @@ title: Jordan Wade
 
 .l-row.c-content
   .l-cell.info
-    %p.header-about I'm a front-end developer and designer. I grew up in a small town in Indiana and worked summers on an Amish carpenter crew. Now, I call Orlando, Florida my home and I work for <a href="http://envylabs.com/" alt="Envy Labs">Envy Labs</a>. Most days you can find me working on <a href="http://www.codeschool.com/" alt="Envy Labs">Code School.</a>
+    %p.header-about I'm a front-end developer and designer. I grew up in a small town in Indiana and worked summers on an Amish carpenter crew. Now, I call Orlando, Florida my home and I work for <a href="http://codeschool.com/" alt="Code School">Code School</a>.
     %ul.link-list
       %li.c-icn
         = link_to 'http://envylabs.com/', class: 'link-envy' do
