Rename and adjust javascripts

--- a/source/angrybird.haml
+++ b/source/angrybird.haml
@@ -2,8 +2,8 @@
 layout: blank
 title: Redneck Game
 scripts:
-  - phaser.min
-  - game
+  - vendor/phaser.min
+  - angrybird
 ---
 
 %p Press the spacebar to jump
