Update view title and add redneck playground

--- a/source/redneck.haml
+++ b/source/redneck.haml
@@ -1,9 +1,8 @@
 ---
 layout: blank
-title: Angry Bird
+title: Redneck Game
 scripts:
-  - vendor/phaser.min
-  - angrybird
+  - redneck
 ---
 
 %p Press the spacebar to jump
