--- a/source/redneck.haml
+++ b/source/redneck.haml
@@ -5,5 +5,7 @@ scripts:
   - redneck
 ---
 
-%p Press the spacebar to jump
-#gameDiv
+%p Redneck walk cycle ../assets/images/redneck.png
+%canvas#canvas(width='800' height='480')
+
+
