--- a/source/assets/stylesheets/core/_settings.sass
+++ b/source/assets/stylesheets/core/_settings.sass
@@ -45,7 +45,7 @@ $base-whitespace: 20px
 
 // Content
 
-$c-header-fontFamily: sans-serif
+$c-header-fontFamily: "proxima-nova", Helvetica, Arial, sans-serif
 $c-icon-fontFamily: "icomoon"
 $c-instructions-fontFamily: "PTSansRegular", sans-serif
 $c-mono-fontFamily: Monaco, Consolas, "Lucida Console", monospace
