--- a/source/assets/stylesheets/core/_settings.sass
+++ b/source/assets/stylesheets/core/_settings.sass
@@ -29,7 +29,7 @@ $font-header: sans-serif
 
 // Base Content
 
-$base-fontFamily: 'Quando', serif
+$base-fontFamily: 'Work Sans', Helvetica, Arial, sans-serif
 $base-fontSize: 16px
 $base-lineHeight: 1.5
 
@@ -45,7 +45,7 @@ $base-whitespace: 20px
 
 // Content
 
-$c-header-fontFamily: "proxima-nova", Helvetica, Arial, sans-serif
+$c-header-fontWeight: 900
 $c-icon-fontFamily: "icomoon"
 $c-instructions-fontFamily: "PTSansRegular", sans-serif
 $c-mono-fontFamily: Monaco, Consolas, "Lucida Console", monospace
