Update about section

--- a/source/index.haml
+++ b/source/index.haml
@@ -7,7 +7,8 @@ scripts:
 
 .l-row.c-content
   .l-cell.info
-    %p.header-about I'm a front-end developer and designer. I grew up in a small town in Indiana and worked summers on an Amish carpenter crew. Now, I call Orlando, Florida my home and I work for <a href="http://codeschool.com/" alt="Code School">Code School</a>.
+    %p.header-about
+      <strong> I'm a UI Engineer at <a href="http://codeschool.com/" alt="Code School">Code School</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Florida my home.
     %ul.link-list
       %li.c-icn
         = link_to 'http://dribbble.com/jordanwade', class: 'link-dribbble' do
