refactor(client): update all hrefs to https

--- a/source/index.haml
+++ b/source/index.haml
@@ -11,7 +11,7 @@ scripts:
       <strong> I'm a UI Engineer at <a href="http://codeschool.com/" alt="Code School">Code School</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Florida my home.
     %ul.link-list
       %li.c-icn
-        = link_to 'http://dribbble.com/jordanwade', class: 'link-dribbble' do
+        = link_to 'https://dribbble.com/jordanwade', class: 'link-dribbble' do
           %b Dribbble
           %i(aria-hidden="true")
       %li.c-icn
