--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -9,7 +9,7 @@
     // Use title if it's in the page YAML frontmatter
     %title= data.page.title || "The Middleman"
     %link{:rel => 'shortcut icon', :type => 'image/x-icon', :href => image_path('favicon.ico')}
-    %link{:href => "http://fonts.googleapis.com/css?family=Work+Sans:400,900", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "https://fonts.googleapis.com/css?family=Work+Sans:400,900", :rel => "stylesheet", :type => "text/css"}
 
     = stylesheet_link_tag 'normalize', 'application'
 
