--- a/source/assets/stylesheets/core/_settings.sass
+++ b/source/assets/stylesheets/core/_settings.sass
@@ -52,73 +52,12 @@ $c-mono-fontFamily: Monaco, Consolas, "Lucida Console", monospace
 
 // Layout
 
-$l-maxWidth: 700px
+$maxWidth: 700px
 
-// @-webkit-keyframes brow
-//   to
-//     background-position: -150px 0
+// Space
 
-// @keyframes brow
-//   to
-//     background-position: -150px 0
-
-//animations
-
-@-webkit-keyframes move_eye
-  0%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-  25%, 35%
-    -webkit-transform: translateX(5px)
-    transform: translateX(5px)
-  85%, 95%
-    -webkit-transform: translateX(-5px)
-    transform: translateX(-5px)
-  100%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-
-
-@-moz-keyframes move_eye
-  0%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-  25%, 35%
-    -webkit-transform: translateX(5px)
-    transform: translateX(5px)
-  85%, 95%
-    -webkit-transform: translateX(-5px)
-    transform: translateX(-5px)
-  100%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-
-
-@-o-keyframes move_eye
-  0%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-  25%, 35%
-    -webkit-transform: translateX(5px)
-    transform: translateX(5px)
-  85%, 95%
-    -webkit-transform: translateX(-5px)
-    transform: translateX(-5px)
-  100%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-
-@keyframes move_eye
-  0%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-  25%, 35%
-    -webkit-transform: translateX(5px)
-    transform: translateX(5px)
-  85%, 95%
-    -webkit-transform: translateX(-5px)
-    transform: translateX(-5px)
-  100%
-    -webkit-transform: translateX(0)
-    transform: translateX(0)
-
+$space: 20px
+$space-025: $space * 0.25
+$space-05: $space * 0.5
+$space-2: $space * 2
+$space-4: $space * 4
