--- a/source/assets/stylesheets/core/_3_config.sass
+++ b/source/assets/stylesheets/core/_3_config.sass
@@ -20,8 +20,9 @@
 $base-background: #FFF
 $base-color: rgba(#000, 0.8)
 $base-invert-color: #FFF
-$base-link-color: #B83D3D
+$base-link-color: #DC667C
 
+$secondary-color: rgba(#000, 0.3)
 // Fonts
 
 $font-base: sans-serif
