--- a/source/layouts/blank.haml
+++ b/source/layouts/blank.haml
@@ -11,7 +11,7 @@
     %link{:rel => 'shortcut icon', :type => 'image/x-icon', :href => image_path('favicon.ico')}
     %link{:href => "https://fonts.googleapis.com/css?family=Work+Sans:400,900", :rel => "stylesheet", :type => "text/css"}
 
-    = stylesheet_link_tag 'normalize', 'application'
+    = stylesheet_link_tag 'application'
 
   %body{class: page_classes}
 
