fix: update link color

--- a/source/assets/stylesheets/core/_3_config.sass
+++ b/source/assets/stylesheets/core/_3_config.sass
@@ -20,7 +20,7 @@
 $base-background: #FFF
 $base-color: rgba(#000, 0.8)
 $base-invert-color: #FFF
-$base-link-color: #DC667C
+$base-link-color: #D8667C
 
 $secondary-color: rgba(#000, 0.3)
 // Fonts
