fix: class typo

--- a/source/index.haml
+++ b/source/index.haml
@@ -7,7 +7,7 @@ title: Jordan Wade
     .bucket.bucket--vc
       .bucket-media
         =image_tag("/assets/images/face.svg")
-      .bucket-conent
+      .bucket-content
         %h1 Jordan Wade
         %p.header-about
           <strong> I'm a UI Engineer at <a href="http://codeschool.com/" alt="Code School">Code School</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Florida my home.
