bug: fix before line element

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -71,6 +71,7 @@
 .link-list
   justify-content: center
   display: flex
+  position: relative
 
   &::before
     content: ""
@@ -79,4 +80,3 @@
     position: absolute
     width: 100%
     top: 15px
-    z-index: 1
