--- a/source/assets/stylesheets/core/_3_config.sass
+++ b/source/assets/stylesheets/core/_3_config.sass
@@ -44,6 +44,12 @@ $base-boxShadow: 0 1px 2px rgba($base-color, 0.25)
 
 $base-whitespace: 20px
 
+// Breakpoints
+
+$bp-s: 480px
+$bp-m: 800px
+$bp-l: 1024px
+
 // Content
 
 $c-header-fontWeight: 900
