--- a/source/index.haml
+++ b/source/index.haml
@@ -27,7 +27,7 @@ title: Jordan Wade
           %b GitHub
           %i(aria-hidden="true")
 %section.row
-  .cell.well.well--2
+  .cell.well.well--2.mbxl
     %h2.tcs Posts
     %h3.header-secondary A written collection of my thoughts, explorations, and workflows.
     %a(href="https://codeschool.com/blog/2016/03/29/benefits-of-learning-how-to-use-svg/")
