bug: position before element to left

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -72,14 +72,15 @@
   margin-bottom: rem(60px)
 
 .link-list
-  justify-content: center
   display: flex
+  justify-content: center
   position: relative
 
   &::before
-    content: ""
     border-top: 1px solid $secondary-color
+    content: ""
     display: block
+    left: 0px
     position: absolute
-    width: 100%
     top: 15px
+    width: 100%
