feat: adjust styles

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -65,11 +65,14 @@
 .mbf 
   margin-bottom: 0
 
+.mbs
+  margin-bottom: rem(10px)
+  
 .mbl
   margin-bottom: rem(40px)
 
 .mbxl
-  margin-bottom: rem(60px)
+  margin-bottom: rem(80px)
 
 .link-list
   display: flex
