--- a/source/index.haml
+++ b/source/index.haml
@@ -8,9 +8,9 @@ title: Jordan Wade
       .bucket-media
         =image_tag("/assets/images/face.svg")
       .bucket-content
-        %h1 Jordan Wade
+        %h1.mbs Jordan Wade
         %p.header-about
-          <strong> I'm a UI Engineer at <a href="http://codeschool.com/" alt="Code School">Code School</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Florida my home.
+          <strong> I'm a UI Engineer at <a href="http://codeschool.com/" alt="Code School">Code School</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Florida my&nbsp;home.
 %section.row.row-b
   .cell.well.mbl     
     %ul.link-list
@@ -30,32 +30,33 @@ title: Jordan Wade
   .cell.well.well--2.mbxl
     %h2.tcs Posts
     %h3.header-secondary A written collection of my thoughts, explorations, and workflows.
-    %a(href="https://codeschool.com/blog/2016/03/29/benefits-of-learning-how-to-use-svg/")
-      %article.article-card
-        %time.article-time(datetime="2016-03-29") MARCH 29, 2016
+    
+    %article.article-card
+      %time.article-time(datetime="2016-03-29") MARCH 29, 2016
+      %a(href="https://codeschool.com/blog/2016/03/29/benefits-of-learning-how-to-use-svg/")
         %h4.article-header Benefits of Learning How to Use SVG
-        %p.article-content The advantages of using SVGs for your icons, illustrations, and complex animations is game changing and easy to implement.
+      %p.article-content The advantages of using SVGs for your icons, illustrations, and complex animations is game changing and easy to implement.
 
-    %a(href="https://codeschool.com/blog/2015/11/06/abstract-art-with-sass/")
-      %article.article-card
-        %time.article-time(datetime="2015-11-06") NOVEMBER 06, 2015
+    %article.article-card
+      %time.article-time(datetime="2015-11-06") NOVEMBER 06, 2015
+      %a(href="https://codeschool.com/blog/2015/11/06/abstract-art-with-sass/")
         %h4.article-header Abstract Art With Sass
-        %p.article-content Experimenting with the technologies we use everyday is a great way to hone our skills and take a break from our everyday work.
+      %p.article-content Experimenting with the technologies we use everyday is a great way to hone our skills and take a break from our everyday work.
 
-    %a(href="https://codeschool.com/blog/2015/09/11/how-to-keep-web-animations-from-slowing-you-down/")
-      %article.article-card
-        %time.article-time(datetime="2015-09-11") SEPTEMBER 11, 2015
+    %article.article-card
+      %time.article-time(datetime="2015-09-11") SEPTEMBER 11, 2015
+      %a(href="https://codeschool.com/blog/2015/09/11/how-to-keep-web-animations-from-slowing-you-down/")
         %h4.article-header How to Keep Web Animations From Slowing You Down
-        %p.article-content Animations can add tremendous value to the user experience on your website or application, but there are certain properties that just slow things down.
+      %p.article-content Animations can add tremendous value to the user experience on your website or application, but there are certain properties that just slow things down.
 
-    %a(href="https://codeschool.com/blog/2014/11/04/inline-svg-animations/")
-      %article.article-card
-        %time.article-time(datetime="2014-11-04") NOVEMBER 04, 2014 
+    %article.article-card
+      %time.article-time(datetime="2014-11-04") NOVEMBER 04, 2014 
+      %a(href="https://codeschool.com/blog/2014/11/04/inline-svg-animations/")
         %h4.article-header Animating With Inline SVG
-        %p.article-content Incorporating animation in your design is a great way to grab a user’s attention and, for me, it adds some fun to an otherwise static design.     
-
-    %a(href="https://codeschool.com/blog/2014/06/24/designing-characters-with-box-shadow/")
-      %article.article-card
-        %time.article-time(datetime="2014-06-24") JUNE 24, 2014  
+      %p.article-content Incorporating animation in your design is a great way to grab a user’s attention and, for me, it adds some fun to an otherwise static design.     
+  
+    %article.article-card
+      %time.article-time(datetime="2014-06-24") JUNE 24, 2014 
+      %a(href="https://codeschool.com/blog/2014/06/24/designing-characters-with-box-shadow/") 
         %h4.article-header Designing Characters with Box Shadow
-        %p.article-content When your lucky enough to work with great designers, sometimes you just have to try your hand at recreating their awesome work with CSS.
+      %p.article-content When your lucky enough to work with great designers, sometimes you just have to try your hand at recreating their awesome work with CSS.
