feat: add transition

--- a/source/assets/stylesheets/core/_4_base.sass
+++ b/source/assets/stylesheets/core/_4_base.sass
@@ -51,6 +51,7 @@ i
 a
   color: $base-link-color
   text-decoration: none
+  transition: color 0.3s linear
   &:hover,
   &:focus
     color: darken($base-link-color, 10%)
